@@ -54,8 +54,8 @@ public class WebTest {
 
         try {
 
-            URL url = new URL("http://" + host  + ":" + port
-                       + contextRoot + "/jsp/test.jspx");
+            URL url = URI.create("http://" + host  + ":" + port
+                       + contextRoot + "/jsp/test.jspx").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
