@@ -58,8 +58,8 @@ public class WebTest {
     }
 
     private void jspInclude() throws Exception {
-        URL url = new URL("http://" + host  + ":" + port +
-            contextRoot + "/jsp/include.jsp");
+        URL url = URI.create("http://" + host  + ":" + port +
+            contextRoot + "/jsp/include.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
