@@ -58,8 +58,8 @@ public class WebTest {
 
     private void invokeJsp() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot
-                          + "/include.jsp");
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot
+                          + "/include.jsp").toURL();
         System.out.println("Invoking URL: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
